<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumo_imu_kf</name>
  <version>0.0.0</version>
  <description>zumo imu Kalman filter</description>
  <maintainer email="peshala@uom.lk">peshala</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>zumo_msgs</depend>
  <depend>zumo_defs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
