<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zumo_serial</name>
  <version>0.0.0</version>
  <description>zumo serial</description>
  <maintainer email="peshala@uom.lk">peshala</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>zumo_msgs</depend>
  <depend>zumo_defs</depend>

  <build_depend>boost</build_depend>
  <exec_depend>boost</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
